.provarCaches/00D410000011HE0EAM/objects/rstkf__glfstmplt2__c.object
<CustomObject>
    <description>glfstmplt2__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfstmplt2_glfstmplt1__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  rstkf__glfstmplt2_format__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_template__c &amp; &apos;-&apos; &amp;  rstkf__glfstmplt2_format__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_col1stdindent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Std # of Col Widths to Indent First Col</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_columns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Columns on Report</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_colzerooffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Column Zero Print Position Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_colzerowidth__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Width in Characters of Column Zero</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_constantdimnum__c</fullName>
        <label>Filter Dimension Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_constantdimval__c</fullName>
        <label>Filter Dimension Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_constantdiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Division for Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_constantfilterdimnum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Dim for Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_constantfilterdimval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Dim Val for Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_constantproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Project for Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_currprecision__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Currency Precision</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Filter Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipName>glfstmplt2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effconstantdimnum__c</fullName>
        <formula>IF(
  rstkf__glfstmplt2_effconstantfilterdimnum__c == &apos;T&apos;,
  IF(rstkf__glfstmplt2_overridedimfilter__c,
    rstkf__glfstmplt2_constantdimnum__c,
    rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_constantdimnum__c 
  ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Constant Dim Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effconstantdimval__c</fullName>
        <formula>IF(
  rstkf__glfstmplt2_effconstantfilterdimval__c == &apos;T&apos;,
  IF(rstkf__glfstmplt2_overridedimfilter__c,
    rstkf__glfstmplt2_constantdimval__c,
    rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_constantdimval__c 
  ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Constant Dim Val</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effconstantdiv__c</fullName>
        <formula>IF(
  OR(rstkf__glfstmplt2_effscope__c == &apos;Single Division&apos;, rstkf__glfstmplt2_effscope__c == &apos;Single Project&apos;, rstkf__glfstmplt2_effscope__c == &apos;Division plus Dimension&apos;, rstkf__glfstmplt2_effscope__c == &apos;Project plus Dimension&apos;),
  IF(rstkf__glfstmplt2_overridedivfilter__c, 
    IF(rstkf__glfstmplt2_constantdiv__c,&apos;T&apos;,&apos;F&apos;),
    IF(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_constantdiv__c,&apos;T&apos;,&apos;F&apos;)
  ), 
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Constant Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effconstantfilterdimnum__c</fullName>
        <formula>IF(rstkf__glfstmplt2_efffilterondimnum__c == &apos;T&apos;,
  IF(rstkf__glfstmplt2_overridedimfilter__c, 
    IF(rstkf__glfstmplt2_constantfilterdimnum__c,&apos;T&apos;,&apos;F&apos;),
    IF(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_constantfilterdimnum__c,&apos;T&apos;,&apos;F&apos;)
  ), 
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Constant Filter Dim Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effconstantfilterdimval__c</fullName>
        <formula>IF(rstkf__glfstmplt2_efffilterondimval__c == &apos;T&apos;,
  IF(rstkf__glfstmplt2_overridedimfilter__c, 
    IF(rstkf__glfstmplt2_constantfilterdimval__c,&apos;T&apos;,&apos;F&apos;),
    IF(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_constantfilterdimval__c,&apos;T&apos;,&apos;F&apos;)
  ), 
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Constant Filter Dim Val</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effconstantproj__c</fullName>
        <formula>IF(
   AND(rstkf__glfstmplt2_effreporttype__c != &apos;Balance Sheet&apos;, OR(rstkf__glfstmplt2_effscope__c == &apos;Single Project&apos;, rstkf__glfstmplt2_effscope__c == &apos;Project plus Dimension&apos;)),
   IF(
      rstkf__glfstmplt2_overrideprojfilter__c, 
      IF(rstkf__glfstmplt2_constantproj__c,&apos;T&apos;,&apos;F&apos;), 
      IF(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_constantproj__c,&apos;T&apos;,&apos;F&apos;)
   ), 
   null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Constant Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effdiv__c</fullName>
        <formula>IF(rstkf__glfstmplt2_overridedivfilter__c, CASESAFEID(rstkf__glfstmplt2_div__c), CASESAFEID (rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_gldiv__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Filter Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_efffilterondimnum__c</fullName>
        <formula>IF(
  OR(rstkf__glfstmplt2_effscope__c == &apos;Company plus Dimension&apos;, rstkf__glfstmplt2_effscope__c == &apos;Division plus Dimension&apos;, rstkf__glfstmplt2_effscope__c == &apos;Project plus Dimension&apos;),
  IF(rstkf__glfstmplt2_overridedimfilter__c, 
    IF(rstkf__glfstmplt2_filterondimnum__c,&apos;T&apos;,&apos;F&apos;), 
    IF(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_filterondimnum__c,&apos;T&apos;,&apos;F&apos;)
  ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Filter On Dim Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_efffilterondimval__c</fullName>
        <formula>IF(
  rstkf__glfstmplt2_efffilterondimnum__c == &apos;T&apos;,
  IF(rstkf__glfstmplt2_overridedimfilter__c, 
    IF(rstkf__glfstmplt2_filterondimval__c,&apos;T&apos;,&apos;F&apos;),
    IF(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_filterondimval__c,&apos;T&apos;,&apos;F&apos;)
  ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Filter On Dim Val</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effproj__c</fullName>
        <formula>IF(rstkf__glfstmplt2_overrideprojfilter__c, CASESAFEID(rstkf__glfstmplt2_proj__c), CASESAFEID (rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_glproj__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Filter Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effreporttype__c</fullName>
        <formula>IF(rstkf__glfstmplt2_overridetype__c, TEXT(rstkf__glfstmplt2_reporttype__c), TEXT(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_reporttype__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_effscope__c</fullName>
        <formula>IF(rstkf__glfstmplt2_overridescope__c, TEXT(rstkf__glfstmplt2_scope__c), TEXT(rstkf__glfstmplt2_glfstmplt1__r.rstkf__glfstmplt1_scope__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_explodeacctranges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Explode Account Ranges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_filterondimnum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Report on a Single Dim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_filterondimval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Report on Val for Single Dim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_format__c</fullName>
        <label>Variant Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_glfstmplt1__c</fullName>
        <label>Financial Statement - Top Level Header</label>
        <referenceTo>rstkf__glfstmplt1__c</referenceTo>
        <relationshipLabel>Financial Report - Variant Headers</relationshipLabel>
        <relationshipName>glfstmplt2s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_headerlines__c</fullName>
        <label>Number of Column Header Lines</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_inactivevariant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, process 9 will ignore this template</inlineHelpText>
        <label>This variant is inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_incompletetemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Template is Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_inerror__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Report Created is in Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_infiniteregress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>There is an Infinite Regression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_lastreport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Report Number Created</label>
        <referenceTo>rstkf__glfinstmt1__c</referenceTo>
        <relationshipLabel>Financial Report - Variant Headers</relationshipLabel>
        <relationshipName>glfstmplt2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_loopincalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Looping Calculations are Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_loopingcalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>There is a Loop in the Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_minussign__c</fullName>
        <label>How Negative Numbers are Identified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parentheses</fullName>
                    <default>true</default>
                    <label>Parentheses</label>
                </value>
                <value>
                    <fullName>Leading Dash</fullName>
                </value>
                <value>
                    <fullName>Trailing Dash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_nullvalueindicator__c</fullName>
        <label>Character to Print When a Col is Empty</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_num_tmplt4__c</fullName>
        <description>Count of GLFSTMPLT4</description>
        <inlineHelpText>This field contains the number of Statement Line Headers associated with this Financial Report Variant</inlineHelpText>
        <label>Number of Subordinate Statement Lines</label>
        <summaryForeignKey>rstkf__glfstmplt4__c.rstkf__glfstmplt4_glfstmplt2__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_onecomporconsol__c</fullName>
        <label>Consolidated or Single-Company Report?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Company</fullName>
                    <default>true</default>
                    <label>Single Company</label>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_overridedimfilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Template-Level Dimension Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_overridedivfilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Template-Level Division Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_overrideprojfilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Template-Level Project Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_overridescope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Template-Level Report Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_overridetype__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Template-Level Report Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_pctprecision__c</fullName>
        <label>Percentage / Small Number Precision</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Filter Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipName>glfstmplt2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_punctuation__c</fullName>
        <label>Decimal Indicator and Thousand Separator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decimal = dot, 1000s = comma</fullName>
                    <default>true</default>
                    <label>Decimal = dot, 1000s = comma</label>
                </value>
                <value>
                    <fullName>Decimal = comma, 1000s = dot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_reporttype__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Schedule</fullName>
                </value>
                <value>
                    <fullName>P &amp; L</fullName>
                </value>
                <value>
                    <fullName>P &amp; L Schedule</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Statement</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Stmt Schedule</fullName>
                </value>
                <value>
                    <fullName>Extended Trial Balance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_roundcurr__c</fullName>
        <label>Currency Rounding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t Round</fullName>
                    <default>true</default>
                    <label>Don&apos;t Round</label>
                </value>
                <value>
                    <fullName>Round to Even Units</fullName>
                </value>
                <value>
                    <fullName>Round to Thousands</fullName>
                </value>
                <value>
                    <fullName>Round to Millions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_roundwhat__c</fullName>
        <label>Z_Obsolete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lines Only</fullName>
                </value>
                <value>
                    <fullName>Lines and Totals</fullName>
                </value>
                <value>
                    <fullName>Lines and Calculated Values</fullName>
                </value>
                <value>
                    <fullName>Everything</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_scope__c</fullName>
        <label>Report Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Wide</fullName>
                </value>
                <value>
                    <fullName>Single Division</fullName>
                </value>
                <value>
                    <fullName>Single Project</fullName>
                </value>
                <value>
                    <fullName>Company plus Dimension</fullName>
                </value>
                <value>
                    <fullName>Division plus Dimension</fullName>
                </value>
                <value>
                    <fullName>Project plus Dimension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_showdashforzerovalue__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Print a Dash When a Number Col Equals 0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_titleline10__c</fullName>
        <label>Title Line 10</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_titleline1__c</fullName>
        <label>Title Line 1</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_titleline2__c</fullName>
        <label>Title Line 2</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_titlelines__c</fullName>
        <label>Number of Title Lines (Max = 10)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt2_unresolvedlabels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>There are Unresolved Calculation Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report - Variant Header</label>
    <listViews>
        <fullName>rstkf__RS_Financial_statement_Variant_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfstmplt2_glfstmplt1__c</columns>
        <columns>rstkf__glfstmplt2_scope__c</columns>
        <columns>rstkf__glfstmplt2_onecomporconsol__c</columns>
        <columns>rstkf__glfstmplt2_reporttype__c</columns>
        <columns>rstkf__glfstmplt2_format__c</columns>
        <columns>rstkf__glfstmplt2_currprecision__c</columns>
        <columns>rstkf__glfstmplt2_roundcurr__c</columns>
        <columns>rstkf__glfstmplt2_punctuation__c</columns>
        <columns>rstkf__glfstmplt2_columns__c</columns>
        <columns>rstkf__glfstmplt2_headerlines__c</columns>
        <columns>rstkf__glfstmplt2_titlelines__c</columns>
        <columns>rstkf__glfstmplt2_minussign__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial statement - Variant Headers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report - Variant Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__lines_not_equal_or_more_than_999</fullName>
        <active>true</active>
        <description>No more lines may be added to this format.</description>
        <errorConditionFormula>rstkf__glfstmplt2_num_tmplt4__c &gt;= 999</errorConditionFormula>
        <errorMessage>No more lines may be added to this format.</errorMessage>
    </validationRules>
</CustomObject>